@@ -108,7 +108,7 @@ table.announcement {
   margin-bottom:15px;
 }
 
-a.detailslink { font-size:10px; }
+a.detailslink, a.editlink { font-size:10px; }
 #detailschanged-outer { margin-left:18px; }
 #detailschanged-outer td, #detailschanged-outer p { font-size:90%; }
 
